syntax = "proto3";

package sample;

option go_package = "a.yandex-team.ru/cloud/dataplatform/schemaregistry/examples/proto;sample";

import "cloud/dataplatform/api/schemaregistry/options/options.proto";
import "google/protobuf/any.proto";

message Table {
    option (yandex.cloud.priv.schemaregistry.v1.options.schemaregistry).enabled = true;

    string id = 1;
    string name = 2;
    string description = 3;
    double version = 4;
    uint64 updated_at = 5;
    string updated_by = 6;
    string href = 7;
    string table_type = 8;
    repeated Columns columns = 9;
    repeated TableConstraints table_constraints = 10;
    Database database = 11;
    repeated google.protobuf.Any tags = 12;
    UsageSummary usage_summary = 13;
    repeated google.protobuf.Any followers = 14;
    Joins joins = 15;
    SampleData sample_data = 16;
    repeated TableProfile table_profile = 17;
    DatabaseSchema database_schema = 18;
}

message Columns {
    string name = 1;
    string data_type = 2;
    string dataType_display = 3;
    string description = 4;
    repeated google.protobuf.Any tags = 5;
    uint32 ordinal_position = 6;
}

message TableConstraints {
    string constraint_type = 1;
    repeated string columns = 2;
}

message Database {
    string id = 1;
    string type = 2;
    string name = 3;
    string description = 4;
    string href = 5;
}

message Stats {
    uint32 count = 1;
    uint32 percentile_rank = 2;
}

message UsageSummary {
    Stats daily_stats = 1;
    Stats weekly_stats = 2;
    Stats monthly_stats = 3;
    string date = 4;
}

message JoinedWith {
    string fully_qualified_name = 1;
    uint32 join_count = 2;
}

message ColumnJoins {
    string column_name = 1;
    repeated JoinedWith joined_with = 2;
}

message Joins {
    string start_date = 1;
    uint32 day_count = 2;
    repeated ColumnJoins column_joins = 3;
}

message SampleData {
    repeated string columns = 1;
    repeated google.protobuf.Any rows = 2;
}

message ColumnProfile {
    string name = 1;
    uint32 unique_count = 2;
    double unique_proportion = 3;
    uint32 distinct_count = 4;
    uint32 distinct_proportion = 5;
}

message TableProfile {
    string profile_date = 1;
    uint32 column_count = 2;
    uint32 row_count = 3;
    repeated ColumnProfile column_profile = 4;
}

message DatabaseSchema {
    string id = 1;
    string type = 2;
    string name = 3;
    string description = 4;
    string href = 5;
}
